--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,10 @@
 services:
+  redis:
+    image: redis:7
+    container_name: seathold-redis
+    restart: unless-stopped
+    ports:
+      - "6379:6379"
   db:
     image: postgres:16
     container_name: seathold_db
