feat: update Angular configuration to allow specific hosts for development

--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -54,6 +54,11 @@
         },
         "serve": {
           "builder": "@angular/build:dev-server",
+          "options": {
+            "allowedHosts": [
+              "nonvasculous-dean-heliographic.ngrok-free.dev"
+            ]
+          },
           "configurations": {
             "production": {
               "buildTarget": "seathold:build:production"
